引入资源文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>xioyan</title>
+    <link rel="stylesheet" href="../resource/style/index.css" />
 </head>
 
 <body>
-    helloworld!!
+    <script src="../resource/js/lib/jquery-1.10.1.min.js"></script>
+    <script src="../resource/js/lib/tap.js"></script>
+    <script src="../resource/js/lib/common.js"></script>
+    <script src="../resource/js/index.js"></script>
 </body>
 
 </html>
