测试资源文件

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    hellow
     <script src="../resource/js/lib/jquery-1.10.1.min.js"></script>
     <script src="../resource/js/lib/tap.js"></script>
     <script src="../resource/js/lib/common.js"></script>
